feat: added new update functionality
Update controller, mappers, business logic and persistence along with the tests.
Use case for deletion by id is removed (by idempotence).
